test/libhyperion/syntaxTests/functionTypes/external_functions_with_calldata_args_assigned_to_function_pointers_of_same_type.hyp
contract C {
    function f(function (string calldata) external) external {}
    function g(string calldata) external {}

    function main() external {
        function (string calldata) external ptr = this.g;
        abi.encodeCall(this.f, (this.g));
        this.f(this.g);
    }
}
// ----
// TypeError 4889: (28-64): External function types are not supported with this address size: address (512 bits) plus selector (32 bits) exceeds the VM word size (512 bits).
